# rpi-seism-reader

./: CMakeLists.txt  README.md  platformio.ini
include/: ads1256.h  enums.h  struct.h
src/: ads1256.cpp  main.cpp
